@@ -28,7 +28,7 @@ plot 'candlesticks.dat' \
      '' using 1:(8):(by3($0)):(by4($0)):1 with xyerrorbars lc var, \
      '' using ($1+.5):($2/2):1 with impulses lc var lw 3,\
      '' using 1:(-3):(0.5):(1):1 with vectors lc var,\
-     '' using 1:(-1):1 with labels tc rgb "red" #variable
+     '' using 1:(-1):1:1 with labels tc variable
 
 pause -1 'Hit <cr> to continue'
 
@@ -69,7 +69,7 @@ plot 'candlesticks.dat' \
      '' using 1:(8):(by3($0)):(by4($0)):(rgbfudge($1)) with xyerrorbars lc rgb var, \
      '' using ($1+.5):($2/2):(rgbfudge($1)) with impulses lc rgb var lw 3,\
      '' using 1:(-3):(0.5):(1):(rgbfudge($1)) with vectors lc rgb var,\
-     '' using 1:(-1):1:(rgbfudge($1)) with labels tc rgb var
+     '' using 1:(-1):1:(rgbfudge($1)) with labels tc rgb var point
 
 pause -1 'Hit <cr> to continue'
 reset
